2010-09-14  Sam Steingold  <sds@gnu.org>

	* clisp-link.in: support module which have no C component:
	build dll only if NEW_LIBS is non-empty

2010-09-02  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (ignore-check): warn about assigned but never read vars

2010-09-01  Sam Steingold  <sds@gnu.org>

	use gnulib sockets.m4 and socklen.m4 instead of the clisp ones
	* Makefile.devel (GNULIB_CORE): add socklen, sockets, close-hook
	* modules/rawsock/rawsock.c, stream.d, socket.di, win32.d:
	use socklen_t instead of CLISP_SOCKLEN_T
	* configure.in: use gl_SOCKETS instead of CL_SOCKET
	and gl_TYPE_SOCKLEN_T instead of CL_SOCKLEN_T
	* makemake.in: use LIBSOCKET instead of assuming everything is in LIBS

2010-09-01  Sam Steingold  <sds@gnu.org>

	use gnulib/host-cpu-c-abi
	* Makefile.devel (GNULIB_CORE): add host-cpu-c-abi
	* configure.in: use gl_HOST_CPU_C_ABI instead of CL_CANONICAL_HOST_CPU
	* makemake.in (host_cpu_c_abi): replaces host_cpu_abi
	* m4/general.m4 (CL_CACHE_EGREP_CPP, CL_SET_CPU_ABI)
	(CL_CANONICAL_HOST_CPU): remove (superseded by gnulib/host-cpu-c-abi)

2010-09-01  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/malloc.c, modules/regexp/gllib/stdlib.in.h:
	* modules/regexp/gllib/unistd.in.h, modules/regexp/glm4/btowc.m4:
	* modules/regexp/glm4/codeset.m4, modules/regexp/glm4/gnulib-comp.m4:
	* modules/regexp/glm4/malloc.m4, modules/regexp/glm4/mbrtowc.m4:
	* modules/regexp/glm4/ssize_t.m4, modules/regexp/glm4/stdlib_h.m4:
	* modules/regexp/glm4/wchar_t.m4, modules/regexp/glm4/wcrtomb.m4:
	* modules/syscalls/gllib/unistd.in.h, modules/syscalls/glm4/mbrlen.m4:
	* modules/syscalls/glm4/wchar_t.m4:
	* gllib/string.in.h, gllib/sys_time.in.h, gllib/unistd.in.h:
	* glm4/codeset.m4, glm4/fcntl-o.m4, glm4/gettext.m4:
	* glm4/iconv.m4, glm4/include_next.m4, glm4/intdiv0.m4:
	* glm4/intl.m4, glm4/intlmacosx.m4, glm4/intmax.m4:
	* glm4/inttypes-pri.m4, glm4/inttypes_h.m4, glm4/lcmessage.m4:
	* glm4/lib-link.m4, glm4/lock.m4, glm4/mbrtowc.m4: