@@ -3,11 +3,8 @@ ${MAKE-make} clisp-module \
   CLISP_LINKKIT="$absolute_linkkitdir" CLISP="${CLISP}"
 NEW_FILES=''
 NEW_LIBS=''
-NEW_MODULES=''
+NEW_MODULES='clx'
 TO_LOAD="package depdefs clx dependent macros bufmac buffer display gcontext input requests fonts graphics text attributes translate keysyms manager image resource describe trace shape"
 for f in $TO_LOAD; do
-  NEW_FILES="$NEW_FILES $f.lisp"
-done
-for f in $TO_LOAD; do
-  NEW_FILES="$NEW_FILES $f.fas"
+  NEW_FILES="$NEW_FILES $f.lisp $f.fas"
 done
